Create glow flicker to header

--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <title>RPS</title>
          <link rel="stylesheet" href="style.css">
-         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cutive Mono">
+         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sigmar">
          <script
          src="class.js"
        ></script>
 
      </head>
      <body>
-
+      <div class="container">
+                  <h1 class="neonText1">ROCK</h1>
+                  <h1 class="neonText2">PAPER</h1>
+                  <h1 class="neonText3">SCISSORS</h1>
+             </div>
+   
+      </div>
       <div id="circ">
-          &nbsp; ROCK . PAPER . SCISSORS .
+          &nbsp; . Choose. Your. Weapon
       
          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
          <script src="https://cdn.jsdelivr.net/npm/circletype@2.3.0/dist/circletype.min.js"></script>
@@ -26,7 +32,7 @@
          </script>
       </div>
 
-      <div class="choose">
+       <div class="choose">
          <img src="rock.png" alt="rock">
          <img src="paper.png" alt="paper">
          <img src="scissors.png" alt="scissors">
